--- a/MS_Estudiantes.yml
+++ b/MS_Estudiantes.yml
@@ -28,3 +28,12 @@ spring:
             authorization-uri: https://accounts.google.com/o/oauth2/auth
             token-uri: https://oauth2.googleapis.com/token
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
+management:
+    endpoints:
+       web:
+          exposure:
+            include: "prometheus,health,info"
+      prometheus:
+        metrics:
+          export:
+            enabled: true
